--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext"
+    ],
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "bundler",
@@ -17,6 +19,6 @@
     "allowJs": true,
     "types": [
       "bun-types" // add Bun global
-    ]
+    ],
   }
 }
