feat: finished writing lexer

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,22 @@
             "type": "bun",
             "internalConsoleOptions": "neverOpen",
             "request": "launch",
-            "name": "Debug File",
-            "program": "${file}",
+            "name": "Debug Program",
+            "program": "src/index.ts",
+            "cwd": "${workspaceFolder}",
+            "args": [
+                "language-stats",
+                "${workspaceFolder}/data/zelensky.json",
+            ],
+            "stopOnEntry": false,
+            "watchMode": false
+        },
+        {
+            "type": "bun",
+            "internalConsoleOptions": "neverOpen",
+            "request": "launch",
+            "name": "Debug Tests",
+            "program": "src/Lexer.test.ts",
             "cwd": "${workspaceFolder}",
             "stopOnEntry": false,
             "watchMode": false
