feat: added tailwind

--- a/src/commands/serve/app/package.json
+++ b/src/commands/serve/app/package.json
@@ -18,5 +18,8 @@
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.5"
   }
 }
