feat: added UI App start command

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
+  "scripts": {
+    "dev": "bun src/index.ts telegram-print data/zelensky.json | bun run --watch src/index.ts serve"
+  },
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.4",
     "@types/ramda": "^0.29.7",
