--- a/src/commands/serve/app/tsconfig.json
+++ b/src/commands/serve/app/tsconfig.json
@@ -18,6 +18,8 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "types": [],
+    "types": [
+      "bun-types"
+    ],
   }
 }
