--- a/src/commands/serve/app/package.json
+++ b/src/commands/serve/app/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rxjs": "^7.8.1",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
